<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVC Travel Form</string>
    <string name="menu_settings">Settings</string>
    <string name="select_day">Select Day</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="select_time">Select Time</string>
    <string name="select_passenger_no">Select Number of Passengers</string>

</resources>